--- a/Bookshopping/src/main/resources/templates/addBook.html
+++ b/Bookshopping/src/main/resources/templates/addBook.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="Fragment/header :: header">
 <meta charset="UTF-8">
 <title>Dodaj książkę</title>
 </head>
 <body>
 
-<form action="/addBook" method="post">
-<p>Tytuł: <input type="text" name="title"></p>
-<p>Imię autora <input type="text" name="name"></p>
-<p>Nazwisko Autora <input type="text" name="surname"></p>
-<p>Liczba stron <input type="number" name="pages"></p>
-<p>Cena : <input type="number" name="price"></p>
-<p>Kraj autora : <input type="text" name="country"></p>
-<p>Wyslij : <input type="submit"></p>
-</form>
+	<form action="/addBook" method="post">
+		<p>
+			Tytuł: <input type="text" name="title" required="required">
+		</p>
+		<p>
+			Imię autora <input type="text" name="name" required="required">
+		</p>
+		<p>
+			Nazwisko Autora <input type="text" name="surname" required="required">
+		</p>
+		<p>
+			Liczba stron <input type="number" name="pages" required="required">
+		</p>
+		<p>
+			Cena : <input type="number" name="price" required="required">
+		</p>
+		<p>
+			Kraj autora : <input type="text" name="country" required="required">
+		</p>
+		<p>
+			Rok urodzenia autora : <input type="number" name="yearOfBorn"
+				required="required">
+		<p>
+			Wyslij : <input type="submit"></p>
+		
+
+	</form>
 
 
 </body>
