--- a/Bookshopping/src/main/resources/templates/index.html
+++ b/Bookshopping/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@ Wyświetl wszystkie ksiażki : <a th:href="@{/getAllBooks}">Pokaż</a>
 <p>
 Dodaj książkę: <a th:href="@{/addBook}">dodaj</a>
 <p>
-Szukaj według autora : <a th:href="@{/ByAuthor}">szukaj</a>
+Szukaj według autora : <a th:href="@{/searchBy	}">szukaj</a>
 <p>
 
 <br>
